Restricted messagebox FF cursor fix to FF2 only to fix field overflow scrolling issues in FF3+
git-svn-id: http://code.extjs.com/svn/ext/trunk@2316 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/dialog.css
+++ b/resources/css/dialog.css
@@ -56,6 +56,6 @@
 .x-window-dlg .ext-mb-error {
     background:transparent url(../images/default/window/icon-error.gif) no-repeat top left;
 }
-.ext-gecko .ext-mb-fix-cursor {
+.ext-gecko2 .ext-mb-fix-cursor {
     overflow:auto;
 }
